[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmaps_locationshare_api"
version = "1.0.0"
description = "Fully asynchronous (unofficial) API client for Google Map's location share functionality"
readme = "README.md"
authors = [{ name = "Bowen Feng", email = "857514.leofeng@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["google", "maps", "async", "client", "location", "share", "location sharing"]
requires-python = ">=3.7"